--- a/references/Globalization_and_Compensation.bib
+++ b/references/Globalization_and_Compensation.bib
@@ -131,6 +131,14 @@
   version = {2022a}
 }
 
+@online{luxembourgincomestudy2023,
+  title = {{{LIS Cross-National Data Center}} in {{Luxembourg}}},
+  author = {{Luxembourg Income Study}},
+  date = {2023},
+  url = {https://dart.lisdatacenter.org/},
+  urldate = {2023-06-16}
+}
+
 @online{malgouyres2017,
   type = {SSRN Scholarly Paper},
   title = {Trade {{Shocks}} and {{Far-Right Voting}}: {{Evidence}} from {{French Presidential Elections}}},
@@ -191,6 +199,14 @@
   journalsubtitle = {Europe}
 }
 
+@online{organizationforeconomicco-operationanddevelopment,
+  title = {Conversion Rates - {{Purchasing}} Power Parities ({{PPP}}) - {{OECD Data}}},
+  author = {{Organization for Economic Co-operation {and} Development}},
+  url = {http://data.oecd.org/conversion/purchasing-power-parities-ppp.htm},
+  urldate = {2023-06-16},
+  organization = {{theOECD}}
+}
+
 @online{organizationforeconomicco-operationanddevelopment2022b,
   title = {Social {{Expenditure Database}} ({{SOCX}}) - {{OECD}}},
   author = {{Organization for Economic Co-operation {and} Development}},
@@ -205,6 +221,24 @@
   date = {2022},
   url = {https://data.oecd.org/earnwage/wage-levels.htm#indicator-chart},
   urldate = {2023-06-07}
+}
+
+@online{organizationforeconomicco-operationanddevelopment2023,
+  title = {{{GDP}} and Spending - {{Gross}} Domestic Product ({{GDP}}) - {{OECD Data}}},
+  author = {{Organization for Economic Co-operation {and} Development}},
+  date = {2023},
+  url = {http://data.oecd.org/gdp/gross-domestic-product-gdp.htm},
+  urldate = {2023-06-16},
+  organization = {{theOECD}}
+}
+
+@dataset{organizationforeconomicco-operationanddevelopment2023a,
+  title = {Trade in Goods and Services},
+  author = {{Organization for Economic Co-operation {and} Development}},
+  date = {2023},
+  publisher = {{OECD}},
+  doi = {10.1787/0fe445d9-en},
+  urldate = {2023-06-09}
 }
 
 @article{robinson1998,
@@ -250,6 +284,22 @@
   publisher = {{[MIT Press, University of Wisconsin Press, Cambridge University Press, International Organization Foundation]}},
   url = {https://www.jstor.org/stable/3078610},
   urldate = {2023-06-02}
+}
+
+@online{theworldbankgroup2023b,
+  title = {Income Share Held by Lowest 20\% | {{Data}}},
+  author = {{The World Bank Group}},
+  date = {2023},
+  url = {https://data.worldbank.org/indicator/SI.DST.FRST.20?end=2020&start=1995},
+  urldate = {2023-06-14}
+}
+
+@online{theworldbankgroup2023c,
+  title = {{{GDP}}, {{PPP}} (Constant 2017 International \$) | {{Data}}},
+  author = {{The World Bank Group}},
+  date = {2023},
+  url = {https://data.worldbank.org/indicator/NY.GDP.MKTP.PP.KD},
+  urldate = {2023-06-16}
 }
 
 @online{unitednationsconferenceontradeanddevelopment2022,
