figures for "Measuring Globalization and Compensation"

--- a/references/Globalization_and_Compensation.bib
+++ b/references/Globalization_and_Compensation.bib
@@ -1,3 +1,15 @@
+@article{alvaredo2018,
+  title = {The {{Elephant Curve}} of {{Global Inequality}} and {{Growth}}},
+  author = {Alvaredo, Facundo and Chancel, Lucas and Piketty, Thomas and Saez, Emmanuel and Zucman, Gabriel},
+  date = {2018-05-01},
+  journaltitle = {AEA Papers and Proceedings},
+  shortjournal = {AEA Papers and Proceedings},
+  volume = {108},
+  pages = {103--108},
+  doi = {10.1257/pandp.20181073},
+  urldate = {2023-06-20}
+}
+
 @article{autor2020,
   title = {Importing {{Political Polarization}}? {{The Electoral Consequences}} of {{Rising Trade Exposure}}},
   author = {Autor, David and Dorn, David and Hanson, Gordon and Majlesi, Kaveh},
@@ -121,6 +133,19 @@
   urldate = {2023-02-12}
 }
 
+@article{lakner2016,
+  title = {Global {{Income Distribution}}: {{From}} the {{Fall}} of the {{Berlin Wall}} to the {{Great Recession}}},
+  author = {Lakner, Christoph and Milanovic, Branko},
+  date = {2016},
+  journaltitle = {The World Bank Economic Review},
+  shortjournal = {World Bank Econ Rev},
+  volume = {30},
+  number = {2},
+  pages = {203--232},
+  doi = {10.1093/wber/lhv039},
+  urldate = {2023-06-20}
+}
+
 @dataset{lehmann2022,
   title = {Manifesto {{Project Dataset}}},
   author = {Lehmann, Pola and Burst, Tobias and Matthieß, Theres and Regel, Sven and Volkens, Andrea and Weßels, Bernhard and Zehnter, Lisa and Wissenschaftszentrum Berlin Für Sozialforschung (WZB)},
@@ -171,6 +196,15 @@
   publisher = {{The Belknap Press of Harvard University Press}},
   location = {{Cambridge, Massachusetts}},
   pagetotal = {299}
+}
+
+@online{milanovic2020,
+  title = {Elephant Who Lost Its Trunk: {{Continued}} Growth in {{Asia}}, but the Slowdown in Top 1\% Growth after the Financial Crisis},
+  author = {Milanović, Branko},
+  date = {2020-10-06},
+  url = {https://cepr.org/voxeu/columns/elephant-who-lost-its-trunk-continued-growth-asia-slowdown-top-1-growth-after},
+  urldate = {2023-06-20},
+  organization = {{CEPR}}
 }
 
 @article{navarro2004,
